Removed boxplot plots. Removed unused columns. Created a list of rows to keep. Descriptive analysis is now done on encoded data. Kmeans cluster methods is changed. HCA is changed and new plots are done.

--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -128,19 +128,13 @@ my_results$cluster_results_absolute$kclust$graph %>%
   marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_absolute$kclust$coord %>%
   marrangeGrob(ncol = 1, nrow = 2, top = NULL)
-my_results$cluster_results_absolute$hclust$graph$two
-my_results$cluster_results_absolute$hclust$graph$four
+my_results$cluster_results_absolute$hclust_bu$graph %>%
+  marrangeGrob(ncol = 2, nrow = 1, top = NULL)
+my_results$cluster_results_absolute$hclust_td$graph %>%
+  marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_absolute$dbscan$graph
 my_results$cluster_results_absolute$optics$graph
-my_results$cluster_results_absolute$boxplots %>%
-  lapply(
-    X = .,
-    FUN = marrangeGrob,
-    ncol = 2,
-    nrow = 2,
-    top = NULL
-  ) %>%
-  walk(print)
+
 ```
 
 ### Relative
@@ -152,19 +146,13 @@ my_results$cluster_results_relative$kclust$graph %>%
   marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_relative$kclust$coord %>%
   marrangeGrob(ncol = 1, nrow = 2, top = NULL)
-my_results$cluster_results_relative$hclust$graph$two
-my_results$cluster_results_relative$hclust$graph$four
+my_results$cluster_results_relative$hclust_bu$graph %>%
+  marrangeGrob(ncol = 2, nrow = 1, top = NULL)
+my_results$cluster_results_relative$hclust_td$graph %>%
+  marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_relative$dbscan$graph
 my_results$cluster_results_relative$optics$graph
-my_results$cluster_results_relative$boxplots %>%
-  lapply(
-    X = .,
-    FUN = marrangeGrob,
-    ncol = 2,
-    nrow = 2,
-    top = NULL
-  ) %>%
-  walk(print)
+
 ```
 
 ### PCA based
@@ -176,118 +164,112 @@ my_results$cluster_results_PCA$kclust$graph %>%
   marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_PCA$kclust$coord %>%
   marrangeGrob(ncol = 1, nrow = 2, top = NULL)
-my_results$cluster_results_PCA$hclust$graph$two
-my_results$cluster_results_PCA$hclust$graph$four
+my_results$cluster_results_PCA$hclust_bu$graph %>%
+  marrangeGrob(ncol = 2, nrow = 1, top = NULL)
+my_results$cluster_results_PCA$hclust_td$graph %>%
+  marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_PCA$dbscan$graph
 my_results$cluster_results_PCA$optics$graph
-my_results$cluster_results_PCA$boxplots %>%
-  lapply(
-    X = .,
-    FUN = marrangeGrob,
-    ncol = 2,
-    nrow = 2,
-    top = NULL
-  ) %>%
-  walk(print)
+
 ```
 
 ## Predicitve
 
 ```{r}
-my_results$my_models_absolute$gbm_caret_model_results$gbm_result$stat$overall
-my_results$my_models_absolute$gbm_model_results$gbm_result$stat$overall
-my_results$my_models_absolute$lgbm_model_results$lgbm_confusion$overall
-my_results$my_models_relative$gbm_caret_model_results$gbm_result$stat$overall
-my_results$my_models_relative$gbm_model_results$gbm_result$stat$overall
-my_results$my_models_relative$lgbm_model_results$lgbm_confusion$overall
-my_results$my_models_PCA$lgbm_model_results$lgbm_confusion$overall
+# my_results$my_models_absolute$gbm_caret_model_results$gbm_result$stat$overall
+# my_results$my_models_absolute$gbm_model_results$gbm_result$stat$overall
+# my_results$my_models_absolute$lgbm_model_results$lgbm_confusion$overall
+# my_results$my_models_relative$gbm_caret_model_results$gbm_result$stat$overall
+# my_results$my_models_relative$gbm_model_results$gbm_result$stat$overall
+# my_results$my_models_relative$lgbm_model_results$lgbm_confusion$overall
+# my_results$my_models_PCA$lgbm_model_results$lgbm_confusion$overall
 ```
 
 ### Absolute
 
 ```{r}
-my_results$my_models_absolute$gbm_model_results$gbm_result[c("stat", "importance_plot")]
-my_results$my_models_absolute$gbm_caret_model_results$gbm_result[c("stat", "importance_plot")]
-t(
-  as.data.frame(
-    my_results$my_models_absolute$lgbm_model_results$lgbm_model$params[c(
-      "boosting",
-      "lambda_l1",
-      "lambda_l2",
-      "num_leaves",
-      "max_depth",
-      "feature_fraction",
-      "bagging_fraction",
-      "bagging_freq",
-      "learning_rate"
-    )]
-  )
-) %>% my_table()
-my_results$my_models_absolute$lgbm_model_results$lgbm_confusion
-my_results$my_models_absolute$lgbm_model_results$lgbm_importance_plot %>% 
-  lgb.plot.importance()
-my_results$my_models_absolute$lgbm_model_results$lgbm_importance_plot %>% 
-  lgb.plot.interpretation()
-my_results$my_models_absolute$lgbm_model_results$lgbm_plot %>% 
-  walk(print)
+# my_results$my_models_absolute$gbm_model_results$gbm_result[c("stat", "importance_plot")]
+# my_results$my_models_absolute$gbm_caret_model_results$gbm_result[c("stat", "importance_plot")]
+# t(
+#   as.data.frame(
+#     my_results$my_models_absolute$lgbm_model_results$lgbm_model$params[c(
+#       "boosting",
+#       "lambda_l1",
+#       "lambda_l2",
+#       "num_leaves",
+#       "max_depth",
+#       "feature_fraction",
+#       "bagging_fraction",
+#       "bagging_freq",
+#       "learning_rate"
+#     )]
+#   )
+# ) %>% my_table()
+# my_results$my_models_absolute$lgbm_model_results$lgbm_confusion
+# my_results$my_models_absolute$lgbm_model_results$lgbm_importance_plot %>% 
+#   lgb.plot.importance()
+# my_results$my_models_absolute$lgbm_model_results$lgbm_importance_plot %>% 
+#   lgb.plot.interpretation()
+# my_results$my_models_absolute$lgbm_model_results$lgbm_plot %>% 
+#   walk(print)
 ```
 
 ### Relative
 
 ```{r}
-my_results$my_models_relative$gbm_model_results$gbm_result[c("stat", "importance_plot")]
-my_results$my_models_relative$gbm_caret_model_results$gbm_result[c("stat", "importance_plot")]
-t(
-  as.data.frame(
-    my_results$my_models_relative$lgbm_model_results$lgbm_model$params[c(
-      "boosting",
-      "lambda_l1",
-      "lambda_l2",
-      "num_leaves",
-      "max_depth",
-      "feature_fraction",
-      "bagging_fraction",
-      "bagging_freq",
-      "learning_rate"
-    )]
-  )
-) %>% my_table()
-my_results$my_models_relative$lgbm_model_results$lgbm_confusion
-my_results$my_models_relative$lgbm_model_results$lgbm_importance_plot %>% 
-  lgb.plot.importance()
-my_results$my_models_relative$lgbm_model_results$lgbm_importance_plot %>% 
-  lgb.plot.interpretation()
-my_results$my_models_relative$lgbm_model_results$lgbm_plot %>% 
-  walk(print)
+# my_results$my_models_relative$gbm_model_results$gbm_result[c("stat", "importance_plot")]
+# my_results$my_models_relative$gbm_caret_model_results$gbm_result[c("stat", "importance_plot")]
+# t(
+#   as.data.frame(
+#     my_results$my_models_relative$lgbm_model_results$lgbm_model$params[c(
+#       "boosting",
+#       "lambda_l1",
+#       "lambda_l2",
+#       "num_leaves",
+#       "max_depth",
+#       "feature_fraction",
+#       "bagging_fraction",
+#       "bagging_freq",
+#       "learning_rate"
+#     )]
+#   )
+# ) %>% my_table()
+# my_results$my_models_relative$lgbm_model_results$lgbm_confusion
+# my_results$my_models_relative$lgbm_model_results$lgbm_importance_plot %>% 
+#   lgb.plot.importance()
+# my_results$my_models_relative$lgbm_model_results$lgbm_importance_plot %>% 
+#   lgb.plot.interpretation()
+# my_results$my_models_relative$lgbm_model_results$lgbm_plot %>% 
+#   walk(print)
 ```
 
 ### PCA
 
 ```{r}
-my_results$my_models_PCA$gbm_model_results$gbm_result[c("stat", "importance_plot")]
-my_results$my_models_PCA$gbm_caret_model_results$gbm_result[c("stat", "importance_plot")]
-t(
-  as.data.frame(
-    my_results$my_models_PCA$lgbm_model_results$lgbm_model$params[c(
-      "boosting",
-      "lambda_l1",
-      "lambda_l2",
-      "num_leaves",
-      "max_depth",
-      "feature_fraction",
-      "bagging_fraction",
-      "bagging_freq",
-      "learning_rate"
-    )]
-  )
-) %>% my_table()
-my_results$my_models_PCA$lgbm_model_results$lgbm_confusion
-my_results$my_models_PCA$lgbm_model_results$lgbm_importance_plot %>% 
-  lgb.plot.importance()
-my_results$my_models_PCA$lgbm_model_results$lgbm_importance_plot %>% 
-  lgb.plot.interpretation()
-my_results$my_models_PCA$lgbm_model_results$lgbm_plot %>% 
-  walk(print)
+# my_results$my_models_PCA$gbm_model_results$gbm_result[c("stat", "importance_plot")]
+# my_results$my_models_PCA$gbm_caret_model_results$gbm_result[c("stat", "importance_plot")]
+# t(
+#   as.data.frame(
+#     my_results$my_models_PCA$lgbm_model_results$lgbm_model$params[c(
+#       "boosting",
+#       "lambda_l1",
+#       "lambda_l2",
+#       "num_leaves",
+#       "max_depth",
+#       "feature_fraction",
+#       "bagging_fraction",
+#       "bagging_freq",
+#       "learning_rate"
+#     )]
+#   )
+# ) %>% my_table()
+# my_results$my_models_PCA$lgbm_model_results$lgbm_confusion
+# my_results$my_models_PCA$lgbm_model_results$lgbm_importance_plot %>% 
+#   lgb.plot.importance()
+# my_results$my_models_PCA$lgbm_model_results$lgbm_importance_plot %>% 
+#   lgb.plot.interpretation()
+# my_results$my_models_PCA$lgbm_model_results$lgbm_plot %>% 
+#   walk(print)
 ```
 
 # References
