Changed folder creation to adapte to new parameters computation.

--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -134,6 +134,17 @@ my_results$cluster_results_absolute$hclust_td$graph %>%
   marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_absolute$dbscan$graph
 my_results$cluster_results_absolute$optics$graph
+my_results$cluster_results_absolute$boxplots %>%
+
+  lapply(
+    X = .,
+    FUN = marrangeGrob,
+    ncol = 2,
+    nrow = 2,
+    top = NULL
+  ) %>%
+  walk(print)
+
 ```
 
 ### Relative
@@ -151,6 +162,16 @@ my_results$cluster_results_relative$hclust_td$graph %>%
   marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_relative$dbscan$graph
 my_results$cluster_results_relative$optics$graph
+my_results$cluster_results_relative$boxplots %>%
+
+  lapply(
+    X = .,
+    FUN = marrangeGrob,
+    ncol = 2,
+    nrow = 2,
+    top = NULL
+  ) %>%
+  walk(print)
 ```
 
 ### PCA based
@@ -168,6 +189,17 @@ my_results$cluster_results_PCA$hclust_td$graph %>%
   marrangeGrob(ncol = 2, nrow = 1, top = NULL)
 my_results$cluster_results_PCA$dbscan$graph
 my_results$cluster_results_PCA$optics$graph
+my_results$cluster_results_PCA$boxplots %>%
+
+  lapply(
+    X = .,
+    FUN = marrangeGrob,
+    ncol = 2,
+    nrow = 2,
+    top = NULL
+  ) %>%
+  walk(print)
+
 ```
 
 ## Predicitve
