Added folder creation and option for LGBM parameter computation in Rmd file (to choose if new parameters have to be computed). Removed the import script and added it as a function.

--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -51,8 +51,11 @@ library(fs)
 
 # Environment
 dir_create(path = "Output")
+dir_create(path = "Environments")
+dir_create(path = "Params")
 
 # Parameters for the analysis
+new_LGBM_params <- TRUE
 discriminating_variables <- c("saturation_rest",
                               "saturation_end",
                               "saturation_delta")
