--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -35,7 +35,7 @@ params:
     label: "Path to multiple data sets folder:"
     value: ./Data
     input: text
-# bibliography: EIH_modeling.bib
+bibliography: EIH_modeling.bib
 ---
 
 ```{r Setup, echo=FALSE, message=FALSE, warning=FALSE}
@@ -94,19 +94,22 @@ discriminating_variables <- c("saturation_rest",
 # Data to use
 import_na_strings <- c("", " ", "na", "NA")
 if (params$data != "none") {
-  imported_data_names <- basename(params$data) %>% tools::file_path_sans_ext()
+  imported_data_names <-
+    basename(params$data) %>% tools::file_path_sans_ext()
   imported_data <-
     params$data %>%
     read.csv(na.strings = import_na_strings) %>%
     lst()
 } else if (params$data_list != "none") {
-  imported_data_names <- basename(params$data_list) %>% tools::file_path_sans_ext()
+  imported_data_names <-
+    basename(params$data_list) %>% tools::file_path_sans_ext()
   imported_data <-
     lapply(X = eval(parse(text = params$data_list)),
            FUN = read.csv,
            na.strings = import_na_strings)
 } else {
-  imported_data_names <- basename(params$data_folder) %>% tools::file_path_sans_ext()
+  imported_data_names <-
+    basename(params$data_folder) %>% tools::file_path_sans_ext()
   imported_data <-
     list.files(path = parse(text = params$data_folder) %>%
                  eval(),
@@ -130,17 +133,10 @@ for (analysis_data in imported_data) {
 
 compute_counter <- 1
 for (analysis_data in imported_data) {
-  # tmp_env <- new.env()
   data_set_name <- imported_data_names[compute_counter]
   compute_env <- my_envs[[compute_counter]]
   source("./Scripts/Unsupervised.R", local = compute_env)
-  # source("./Scripts/Supervised.R", local = tmp_env)
-  
-  # old_names <- ls(envir = env_name)
-  # for (old_name in old_names) {
-  #   new_name <- paste(old_name, data_set_name, sep = "_")
-  #   assign(x = new_name, value = get(old_name, envir = env_name))
-  # }
+  source("./Scripts/Supervised.R", local = compute_env)
   compute_counter <- compute_counter + 1
 }
 ```
@@ -179,17 +175,28 @@ describe(x = analysis_data[c("age",
                              "height",
                              "weight")] , na.rm = T) %>%
   select(c("mean", "sd", "median", "min", "max")) %>%
-  my_table(caption = "<center><strong>Données anthropologiques (n = 127)</center></strong>")
+  my_table(
+    caption = paste0(
+      "<center><strong>Anthropological values (n = ",
+      nrow(analysis_data) ,
+      ")</center></strong>"
+    )
+  )
 describe(x = analysis_data[c("train_years",
                              "train_volume")], na.rm = T) %>%
   select(c("mean", "sd", "median", "min", "max")) %>%
-  my_table(caption = "<center><strong>Données d'entraînement des athlètes (n = 127)</center></strong>")
+  my_table(
+    caption = paste0(
+      "<center><strong>Données d'entraînement des athlètes (n = ",
+      nrow(analysis_data) ,
+      ")</center></strong>"
+    )
+  )
 ```
 
 # Results
 
 ```{r Results, echo=FALSE, results='asis'}
-# source_rmd("Result_template.Rmd") 
 for (my_env in my_envs) {
   cat(
   knitr::knit_child('Result_template.Rmd', envir = my_env, quiet = TRUE)
@@ -203,8 +210,8 @@ for (my_env in my_envs) {
 <div id="refs"></div>
 
 ```{r End_tasks, include=FALSE}
-# dir_copy(path = "./figure/",
-#          new_path = paste0("Output/", analysis_date))
+dir_copy(path = "./EIH_Modeling_Classification_files/figure-html/",
+         new_path = paste0("Output/", analysis_date))
 # dir_delete(path = "./figure/")
 save.image(file = paste0("./Output/", analysis_date, "/global.RData"))
 ```
